2015-02-27  Richard Biener  <rguenther@suse.de>

	PR middle-end/63175
	* builtins.c (get_object_alignment_2): Make sure to re-apply
	the ANDed mask after recursing to its operand gets us a new
	misalignment bit position.

2015-02-27  Andrew Pinski  <apinski@cavium.com>
	    Naveen H.S  <Naveen.Hurugalawadi@caviumnetworks.com>
 
	* config/aarch64/aarch64.c (*aarch64_load_symref_appropriately):
	Check whether the destination of SYMBOL_SMALL_TPREL is Pmode.

2015-02-27  Richard Biener  <rguenther@suse.de>

	PR lto/65193
	Backport from mainline
	2014-07-24  Jan Hubicka  <hubicka@ucw.cz>
 
	* lto-streamer-out.c (tree_is_indexable): Consider IMPORTED_DECL
	as non-indexable.

2015-02-25  Peter Bergner  <bergner@vnet.ibm.com>

	Backport from mainline
	2015-02-25  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* config/rs6000/htm.md (tcheck): Fix assembly encoding.

2015-02-26  Matthew Fortune  <matthew.fortune@imgtec.com>

	PR target/64569
	Backported from mainline: r213872, r217446, r217939, r219867

	* config.in [!USED_FOR_TARGET] (HAVE_AS_DOT_MODULE): Undefine.
	* config/mips/mips.h (FP_ASM_SPEC): New macro.
	(ASM_SPEC): Use FP_ASM_SPEC.
	* configure.ac (HAVE_AS_DOT_MODULE): Detect support for .module
	and FPXX extensions.
	* configure: Regenerate.

2015-02-25  Jason Merrill  <jason@redhat.com>

	* common.opt (-flifetime-dse): New.

2015-02-25  Kai Tietz  <ktietz@redhat.com>

	PR tree-optimization/61917
	* tree-vect-loop.c (vectorizable_reduction): Handle obvious case
	that reduc_def_stmt is null.

	Merged from mainline
	PR target/64212
	* symtab.c (symtab::make_decl_local): Set DECL_IMPORT_P explicit to 0.
	(symtab::noninterposable_alias): Likewise.

2015-02-25  Richard Biener  <rguenther@suse.de>
	Kai Tietz  <ktietz@redhat.com>

	Backported from mainline
	PR tree-optimization/61917
	* tree-vect-loop.c (vectorizable_reduction): Allow
	vect_internal_def without reduction to exit graceful.

2015-02-25  Georg-Johann Lay  <avr@gjlay.de>

	PR target/65196