@@ -1,3 +1,11 @@
+2015-01-23  Thomas Preud'homme  <thomas.preudhomme@arm.com>
+
+	Backport from mainline
+	2015-01-14  Thomas Preud'homme  <thomas.preudhomme@arm.com>
+
+	PR target/64453
+	* gcc.target/arm/pr64453.c: New.
+
 2015-02-27  Pat Haugen <pthaugen@us.ibm.com>
 
 	* gcc.dg/vect/pr59354.c: Move vector producing code to separate function.
